reactive forms: validation

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,7 +4,7 @@
     <input type="text" placeholder="username" #usNm/>
     <input type="password" placeholder="password" #pass/>
     <button (click)="onLogin(usNm.value,pass.value)">login</button>
-    <p class="message">Not registered? <a [routerLink]="['reg']"RouterLinkActive='rtr'>Create an account</a></p>
+    <p class="message">Not registered? <a [routerLink]="['regRec']"RouterLinkActive='rtr'>Create an account</a></p>
 
   </form>
 </div>
