--- a/src/app/dash-board/dash-board.component.css
+++ b/src/app/dash-board/dash-board.component.css
@@ -1,3 +1,7 @@
+
 .rtr {
- border: 1px solid red !important;
+  border: 1px solid red !important;
+  background-color: lightpink !important;
+  font-size: 26px;
+  color: darkred;
 }
